fixed some of the spacing and colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ header {
 
 .description {
     font-style: italic;
-    color: rgb(12, 57, 71);
+    color: rgb(33, 37, 37);
 }
 
 .search-result-container {
